--- a/assets/style.css
+++ b/assets/style.css
@@ -476,6 +476,7 @@ nav {
     box-shadow: 1px 1px 50px rgb(0, 0, 0);
 
     /* border-radius: 10px; */ 
+    z-index: 2;
 }
 .logo {
     /* height: 100px; */
@@ -530,7 +531,6 @@ nav {
     padding: 10px;
     margin: 10px;
     /* margin-right: 100px; */
-
 }
 .navLink, .footerLink {
     padding: 10px;
@@ -584,6 +584,7 @@ nav {
   .dropdown {
     position: relative;
     display: inline-block;
+    /* z-index: 3; */
   }
   
   .dropdown-content {
@@ -593,7 +594,7 @@ nav {
     visibility: hidden;
     position: absolute;
     min-width: 160px;
-    z-index: 1;
+    /* z-index: 3; */
     /* transform: translateY(-25%); Move the element up to the top */
     /* transition: opacity 0.5s ease-in, visibility 0.5s ease-in, transform 0.5s ease-in; Add a transition */
   }
@@ -605,6 +606,7 @@ nav {
     background-color: rgb(9, 116, 39);
     border-radius: 10px;
     box-shadow: 1px 1px 50px rgb(0, 0, 0);
+
     /* transform: translateY(0); Move the element down to its original position */
   }
 
